--- a/GHSidebarNav/details/peru_details_1.html
+++ b/GHSidebarNav/details/peru_details_1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML> 
 <html>
 <head>
@@ -6,16 +7,13 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/> 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/css/bootstrap.css">
-    <link href='main.css' rel='stylesheet'/>
+    <link href='http://192.241.236.197/tripmomento/main.css' rel='stylesheet'/>
 </head>
 <body>
 
     <div id='mySwipe' style='max-width:500px;margin:0 auto' class='swipe'>
         <div class='swipe-wrap'>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru4.png" height="200px"/></div>
             <div><img src="http://192.241.236.197/tripmomento/img/peru/peru1.png" height="200px"/></div>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru2.png" height="200px"/></div>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru3.png" height="200px"/></div>
         </div>
     </div>
 
