--- a/GHSidebarNav/details/peru_food_details_1.html
+++ b/GHSidebarNav/details/peru_food_details_1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML> 
 <html>
 <head>
@@ -12,10 +13,7 @@
 
     <div id='mySwipe' style='max-width:500px;margin:0 auto' class='swipe'>
         <div class='swipe-wrap'>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru4.png" height="200px"/></div>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru1.png" height="200px"/></div>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru2.png" height="200px"/></div>
-            <div><img src="http://192.241.236.197/tripmomento/img/peru/peru3.png" height="200px"/></div>
+            <div><img src="http://192.241.236.197/tripmomento/img/peru/purplepotatoes.jpg" height="200px"/></div>
         </div>
     </div>
 
@@ -44,7 +42,7 @@
 
         <div class="title">
             <img src="http://192.241.236.197/tripmomento/img/star.png" />
-            <span> Merchants selling this </span>
+            <span> Hotels selling this </span>
         </div>
 
         <div class="stores">
