--- a/GHSidebarNav/details/peru_details_2.html
+++ b/GHSidebarNav/details/peru_details_2.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/> 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/css/bootstrap.css">
-    <link href='main.css' rel='stylesheet'/>
+    <link href='http://192.241.236.197/tripmomento/main.css' rel='stylesheet'/>
 </head>
 <body>
 
@@ -134,7 +134,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
-<script src='swipe.js'></script>
+<script src='http://192.241.236.197/tripmomento/swipe.js'></script>
 <script>
 
     // pure JS
