--- a/GHSidebarNav/cambodiafood.html
+++ b/GHSidebarNav/cambodiafood.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="http://192.241.236.197/tripmomento/main.css"/>
     </head>
     <body class="yui3-skin-sam">
         <div id="root">
