--- a/GHSidebarNav/details/peru_details_1.html
+++ b/GHSidebarNav/details/peru_details_1.html
@@ -134,7 +134,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
-<script src='swipe.js'></script>
+<script src='http://192.241.236.197/tripmomento/swipe.js'></script>
 <script>
 
     // pure JS
