--- a/GHSidebarNav/perudetails.html
+++ b/GHSidebarNav/perudetails.html
@@ -20,8 +20,8 @@
     </div>
 
     <div class="swipeControls">
-      <span class="leftSwipe" onclick='mySwipe.prev()'><img src="img/left-arrow.png"/></span> 
-      <span class="rightSwipe" onclick='mySwipe.next()'><img src="img/right-arrow.png"/></span>
+      <span class="leftSwipe" onclick='mySwipe.prev()'><img src="http://192.241.236.197/tripmomento/img/left-arrow.png"/></span> 
+      <span class="rightSwipe" onclick='mySwipe.next()'><img src="http://192.241.236.197/tripmomento/img/right-arrow.png"/></span>
     </div>
 
     <div class='container'>
@@ -34,16 +34,16 @@
         <hr>
         
         <div class="collectors">
-            <span class="pic"><img src="img/profile1.jpeg" /></span>
-            <span class="pic"><img src="img/profile2.jpeg" /></span>
-            <span class="pic"><img src="img/profile3.jpeg" /></span>
+            <span class="pic"><img src="http://192.241.236.197/tripmomento/img/profile1.jpeg" /></span>
+            <span class="pic"><img src="http://192.241.236.197/tripmomento/img/profile2.jpeg" /></span>
+            <span class="pic"><img src="http://192.241.236.197/tripmomento/img/profile3.jpeg" /></span>
             <span class="count">James, Amy and 36 others have collected this item.</span>
         </div>
         
         <hr>
 
         <div class="title">
-            <img src="img/star.png" />
+            <img src="http://192.241.236.197/tripmomento/img/star.png" />
             <span> Merchants selling this </span>
         </div>
 
@@ -55,14 +55,14 @@
                 <div class="price">S/.90</div>
             </div>
             <div class="merchant green" data-toggle="modal" data-target="#freetrader">
-                <img src="img/fairtrade.png" class="fairtrade"/>
+                <img src="http://192.241.236.197/tripmomento/img/fairtrade.png" class="fairtrade"/>
                 <h4> Peru hand made souvenirs </h4>
                 <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.40</div>
             </div>
             <div class="merchant green" data-toggle="modal" data-target="#freetrader">
-                <img src="img/fairtrade.png" class="fairtrade"/>
+                <img src="http://192.241.236.197/tripmomento/img/fairtrade.png" class="fairtrade"/>
                 <h4> Peru hand made souvenirs </h4>
                 <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
                 <div class="link">></div>
@@ -73,21 +73,21 @@
         <hr>
 
         <div class="title">
-            <img src="img/star.png" />
+            <img src="http://192.241.236.197/tripmomento/img/star.png" />
             <span> Comments </span>
         </div>
 
         <div class="comments">
             <div class="comment">
-                <div class="profilepic"><img src="img/profile1.jpeg" /></div>
+                <div class="profilepic"><img src="http://192.241.236.197/tripmomento/img/profile1.jpeg" /></div>
                 <div class="commenttext">This is art. My wife loved it!</div>
             </div>
             <div class="comment">
-                <div class="profilepic"><img src="img/profile2.jpeg" /></div>
+                <div class="profilepic"><img src="http://192.241.236.197/tripmomento/img/profile2.jpeg" /></div>
                 <div class="commenttext">This is so beautiful. I am definately going to buy this when I visit Peru. </div>
             </div>
             <div class="comment">
-                <div class="profilepic"><img src="img/profile3.jpeg" /></div>
+                <div class="profilepic"><img src="http://192.241.236.197/tripmomento/img/profile3.jpeg" /></div>
                 <div class="commenttext">I just got this delivered to my home. Its absolutely amazing.</div>
             </div>
 
