--- a/GHSidebarNav/perufood.html
+++ b/GHSidebarNav/perufood.html
@@ -21,7 +21,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_food_details_1.html" class="button challenge">More >></a>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_details_2.html" class="button challenge">More >></a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_details_3.html" class="button challenge">More >></a>
                     </div>
                 </div>
             </div>
