--- a/GHSidebarNav/peruhome.html
+++ b/GHSidebarNav/peruhome.html
@@ -41,7 +41,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_details_1.html" class="button challenge">More >></a>
                     </div>
                     <div class="collected">74 people collected this momento</div>
                 </div>
@@ -60,7 +60,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_details_2.html" class="button challenge">More >></a>
                     </div>
                     <div class="collected">54 people collected this momento</div>
                 </div>
@@ -79,7 +79,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_details_3.html" class="button challenge">More >></a>
                     </div>
                 </div>
                 <div class="collected">42 people collected this momento</div>
@@ -97,7 +97,7 @@
                             </span>
                         </h3>
                         <!-- <a href="#" class="button collect">Collect</a> -->
-                        <a href="#" class="button challenge">More >></a>
+                        <a href="http://192.241.236.197/tripmomento/details/peru_details_4.html" class="button challenge">More >></a>
                     </div>
                     <div class="collected">304 people collected this momento</div>
                 </div>
