--- a/GHSidebarNav/cambodiafood.html
+++ b/GHSidebarNav/cambodiafood.html
@@ -6,7 +6,7 @@
     </head>
     <body class="yui3-skin-sam">
         <div id="root">
-            <div class="item" style="background-image:url('img/cambodia/StirFriedBabySnakes.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/cambodia/StirFriedBabySnakes.jpg')">
                 <div class="price btn btn-default">KHR 50</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -25,7 +25,7 @@
                     <div class="collected">1340 collected this momento</div>
                 </div>
             </div>                        
-            <div class="item" style="background-image:url('img/cambodia/StirFriedFrogs.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/cambodia/StirFriedFrogs.jpg')">
                 <div class="price btn btn-default">KHR 100</div>
                 <div class="wrapper">
                     <div class="margin">
