--- a/GHSidebarNav/details/peru_details_2.html
+++ b/GHSidebarNav/details/peru_details_2.html
@@ -25,7 +25,7 @@
     <div class='container'>
         
         <div class="description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            The Sweet potato is native to Central America and was domesticated there at least 5,000 years ago. The much lower molecular diversity found in Peru and Ecuador suggests that the sweet potato was introduced there from Central America. Only two varieties of sweet potato are commonly available for sale in Peru. One has dry orange flesh and light tan skin and tastes sweet 
             <div class="collect"><button class="btn btn-primary">Facebook</button>&nbsp;<button class="btn btn-info">Twitter</button><button class="btn btn-warning">Collect this</button></div>
         </div>
 
