--- a/GHSidebarNav/cambodiahome.html
+++ b/GHSidebarNav/cambodiahome.html
@@ -26,7 +26,7 @@
                     <div class="collected">2049 people collected this momento</div>
                 </div>
             </div>
-            <div class="item" style="background-image:url('img/cambodia/ApsaraImagesOnPaperSouvenirs-1.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/cambodia/ApsaraImagesOnPaperSouvenirs-1.jpg')">
                 <div class="price btn btn-default">KHR 400</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -46,7 +46,7 @@
                     <div class="collected">7124 people collected this momento</div>
                 </div>
             </div>
-            <div class="item" style="background-image:url('img/cambodia/Elephant.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/cambodia/Elephant.jpg')">
                 <div class="price btn btn-default">KHR 100</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -65,7 +65,7 @@
                     <div class="collected">5412 people collected this momento</div>
                 </div>
             </div>
-            <div class="item" style="background-image:url('img/cambodia/WoodenCrafts.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/cambodia/WoodenCrafts.jpg')">
                 <div class="price btn btn-default">KHR 1000</div>
                 <div class="wrapper">
                     <div class="margin">
