--- a/GHSidebarNav/details/peru_details_1.html
+++ b/GHSidebarNav/details/peru_details_1.html
@@ -25,7 +25,7 @@
     <div class='container'>
         
         <div class="description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            Purple potatoes are a type of potato popular in South America, with their origins in Peru and Bolivia. These potatoes have many uses and a striking purple color that can brighten up any dish. Besides adding color to your table, these potatoes can be beneficial to your health due to their abundance of antioxidants. 
             <div class="collect"><button class="btn btn-primary">Facebook</button>&nbsp;<button class="btn btn-info">Twitter</button><button class="btn btn-warning">Collect this</button></div>
         </div>
 
