--- a/GHSidebarNav/details/peru_details_3.html
+++ b/GHSidebarNav/details/peru_details_3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML> 
 <html>
 <head>
@@ -25,7 +24,7 @@
     <div class='container'>
         
         <div class="description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            Choclo, also referred to as Peruvian corn or Cuzco corn is a large kernel corn from the Andes. It is consumed in parts of Central America and South America, especially in Peru and Colombia. The oversized kernels are described as chewier, starchier and less sweet than other types of sweet corn and as having a nutty taste and heftier texture.
             <div class="collect"><button class="btn btn-primary">Facebook</button>&nbsp;<button class="btn btn-info">Twitter</button><button class="btn btn-warning">Collect this</button></div>
         </div>
 
