--- a/GHSidebarNav/details/peru_details_2.html
+++ b/GHSidebarNav/details/peru_details_2.html
@@ -25,7 +25,7 @@
     <div class='container'>
         
         <div class="description">
-            The Sweet potato is native to Central America and was domesticated there at least 5,000 years ago. The much lower molecular diversity found in Peru and Ecuador suggests that the sweet potato was introduced there from Central America. Only two varieties of sweet potato are commonly available for sale in Peru. One has dry orange flesh and light tan skin and tastes sweet 
+            Peruvian Gold idols give an idea, in general, what the Spanish found when they came to this country, resulting in the encounter between two cultures, one that gave the most value to precious metals and the local that valorised the time in performing work or make an object, despite having precious metals used for religious, power status, as tools or as part of their clothing or attire.
             <div class="collect"><button class="btn btn-primary">Facebook</button>&nbsp;<button class="btn btn-info">Twitter</button><button class="btn btn-warning">Collect this</button></div>
         </div>
 
@@ -48,21 +48,21 @@
         <div class="stores">
             <div class="merchant paid" data-toggle="modal" data-target="#checkout">
                 <h4> Peru hand made souvenirs </h4>
-                <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
+                <span class="addrs"> #123, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.90</div>
             </div>
             <div class="merchant green" data-toggle="modal" data-target="#freetrader">
                 <img src="http://192.241.236.197/tripmomento/img/fairtrade.png" class="fairtrade"/>
                 <h4> Peru hand made souvenirs </h4>
-                <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
+                <span class="addrs"> #123, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.40</div>
             </div>
             <div class="merchant green" data-toggle="modal" data-target="#freetrader">
                 <img src="http://192.241.236.197/tripmomento/img/fairtrade.png" class="fairtrade"/>
                 <h4> Peru hand made souvenirs </h4>
-                <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
+                <span class="addrs"> #123, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.50</div>
             </div>
@@ -95,15 +95,17 @@
             </div>
         </div>
 
+        <br><br><br>
+        
         <div id="freetrader" class="modal fade">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Merchant</h4>
+                <h4 class="modal-title">Merchant <span class="label label-success">Fair Trade</span></h4>
               </div>
               <div class="modal-body">
-                <p>This merchant is freetrader. He has get directions.</p>
+                <p><img class="merchantpic" src="../img/peru/perumerchant.jpg"/> Diego is a 74 year artist who has been selling handicrafts throughout his life. He has 2 daugthers both of whom work at his small store to make a living. Click on get directions to find out way to his store.</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-success">Get Directions</button>
@@ -120,7 +122,7 @@
                 <h4 class="modal-title">Merchant</h4>
               </div>
               <div class="modal-body">
-                <p>Description of the merchant. This merchant has checkout.</p>
+                <p><img class="merchantpic" src="../img/peru/printo.jpeg"/> PeruPrinto provides same day delivery. Checkout now and recieve the package at your hotel. Enter your name or text to personilze your momento</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-warning">Checkout</button>
