--- a/GHSidebarNav/details/peru_details_3.html
+++ b/GHSidebarNav/details/peru_details_3.html
@@ -24,7 +24,7 @@
     <div class='container'>
         
         <div class="description">
-            Choclo, also referred to as Peruvian corn or Cuzco corn is a large kernel corn from the Andes. It is consumed in parts of Central America and South America, especially in Peru and Colombia. The oversized kernels are described as chewier, starchier and less sweet than other types of sweet corn and as having a nutty taste and heftier texture.
+            Handmade lima fur dolls handcrafted by traditional Alpaca artist Dean Stadler.
             <div class="collect"><button class="btn btn-primary">Facebook</button>&nbsp;<button class="btn btn-info">Twitter</button><button class="btn btn-warning">Collect this</button></div>
         </div>
 
@@ -47,21 +47,21 @@
         <div class="stores">
             <div class="merchant paid" data-toggle="modal" data-target="#checkout">
                 <h4> Peru hand made souvenirs </h4>
-                <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
+                <span class="addrs"> #123, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.90</div>
             </div>
             <div class="merchant green" data-toggle="modal" data-target="#freetrader">
                 <img src="http://192.241.236.197/tripmomento/img/fairtrade.png" class="fairtrade"/>
                 <h4> Peru hand made souvenirs </h4>
-                <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
+                <span class="addrs"> #123, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.40</div>
             </div>
             <div class="merchant green" data-toggle="modal" data-target="#freetrader">
                 <img src="http://192.241.236.197/tripmomento/img/fairtrade.png" class="fairtrade"/>
                 <h4> Peru hand made souvenirs </h4>
-                <span class="addrs"> #123, 2nd cross, kokamachi, Peru </span>
+                <span class="addrs"> #123, kokamachi, Peru </span>
                 <div class="link">></div>
                 <div class="price">S/.50</div>
             </div>
@@ -99,10 +99,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Merchant</h4>
+                <h4 class="modal-title">Merchant <span class="label label-success">Fair Trade</span></h4>
               </div>
               <div class="modal-body">
-                <p>This merchant is freetrader. He has get directions.</p>
+                <p><img class="merchantpic" src="../img/peru/perumerchant.jpg"/> Diego is a 74 year artist who has been selling handicrafts throughout his life. He has 2 daugthers both of whom work at his small store to make a living. Click on get directions to find out way to his store.</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-success">Get Directions</button>
@@ -119,7 +119,7 @@
                 <h4 class="modal-title">Merchant</h4>
               </div>
               <div class="modal-body">
-                <p>Description of the merchant. This merchant has checkout.</p>
+                <p><img class="merchantpic" src="../img/peru/printo.jpeg"/> PeruPrinto provides same day delivery. Checkout now and recieve the package at your hotel. Enter your name or text to personilze your momento</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-warning">Checkout</button>
