--- a/GHSidebarNav/perufood.html
+++ b/GHSidebarNav/perufood.html
@@ -6,7 +6,7 @@
     </head>
     <body class="yui3-skin-sam">
         <div id="root">
-            <div class="item" style="background-image:url('img/peru/purplepotatoes.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/peru/purplepotatoes.jpg')">
                 <div class="price btn btn-default">S/.10</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image:url('img/peru/perufood2.jpg')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/peru/perufood2.jpg')">
                 <div class="price btn btn-default">S/.400</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image:url('img/peru/perufood3.png')">
+            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/peru/perufood3.png')">
                 <div class="price btn btn-default">S/.400</div>
                 <div class="wrapper">
                     <div class="margin">
