--- a/GHSidebarNav/cambodiahome.html
+++ b/GHSidebarNav/cambodiahome.html
@@ -6,7 +6,7 @@
     </head>
     <body class="yui3-skin-sam">
         <div id="root">
-            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/cambodia/Buddha.jpg')">
+            <div class="item" style="background-image:url('img/cambodia/Buddha.jpg')">
                 <div class="price btn btn-default">KHR 70</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -82,7 +82,8 @@
                     </div>
                     <div class="collected">1240 people collected this momento</div>
                 </div>
-            </div>    
+            </div>
         </div>
+        <br><br><br>
     </body>
 </html>
