--- a/GHSidebarNav/peruhome.html
+++ b/GHSidebarNav/peruhome.html
@@ -6,7 +6,7 @@
     </head>
     <body class="yui3-skin-sam">
         <div id="root">
-            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/peru/peru5.png')">
+            <div class="item" style="background-image:url('peru5.png')">
                 <div class="price btn btn-default">S/.10</div>
                 <div class="wrapper">
                     <div class="margin">
@@ -26,7 +26,7 @@
                     <div class="collected">10234 people collected this momento</div>
                 </div>
             </div>
-            <div class="item" style="background-image:url('http://192.241.236.197/tripmomento/img/peru/peru2.png')">
+            <div class="item" style="background-image:url('peru2.png')">
                 <div class="price btn btn-default">S/.400</div>
                 <div class="wrapper">
                     <div class="margin">
